--- a/package.json
+++ b/package.json
@@ -3,26 +3,30 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@emotion/react": "^11.11.1",
-    "@emotion/styled": "^11.11.0",
+    "@date-io/dayjs": "^3.0.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@fortawesome/fontawesome-svg-core": "^6.4.0",
     "@fortawesome/free-regular-svg-icons": "^6.4.0",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mui/icons-material": "^5.14.3",
-    "@mui/material": "^5.14.5",
+    "@mui/material": "^5.16.0",
+    "@mui/system": "^5.16.0",
     "@mui/x-data-grid": "^6.12.1",
+    "@mui/x-date-pickers": "^7.9.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
     "date-fns": "^2.30.0",
+    "dayjs": "^1.11.11",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
     "react-circular-progressbar": "^2.1.0",
     "react-date-range": "^1.4.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.1",
+    "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
     "rechart": "^0.0.1",
     "recharts": "^2.8.0",
@@ -57,6 +61,6 @@
     "@types/jwt-decode": "^3.1.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "typescript": "^5.5.3"
+    "typescript": "^4.9.5"
   }
 }
