--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mdi/js": "^7.4.47",
     "@mdi/react": "^1.6.1",
-    "@mui/icons-material": "^5.14.3",
-    "@mui/material": "^5.16.0",
+    "@mui/icons-material": "^5.16.1",
+    "@mui/material": "^5.16.1",
     "@mui/system": "^5.16.0",
     "@mui/x-data-grid": "^6.12.1",
     "@mui/x-date-pickers": "^7.9.0",
@@ -31,15 +31,16 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.14.1",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
     "rechart": "^0.0.1",
     "recharts": "^2.8.0",
     "sass": "^1.66.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "webpack": "^5.93.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts start",
+    "build": "set NODE_OPTIONS=--openssl-legacy-provider && react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -65,6 +66,7 @@
     "@types/jwt-decode": "^3.1.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
-    "typescript": "^4.9.5"
+    "tailwindcss": "^3.4.4",
+    "typescript": "^4.4.4"
   }
 }
