--- a/package.json
+++ b/package.json
@@ -13,8 +13,9 @@
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@mdi/js": "^7.4.47",
     "@mdi/react": "^1.6.1",
-    "@mui/icons-material": "^5.16.1",
+    "@mui/icons-material": "^5.16.4",
     "@mui/material": "^5.16.4",
+    "@mui/styles": "^5.16.4",
     "@mui/system": "^5.16.0",
     "@mui/x-charts": "^7.11.0",
     "@mui/x-data-grid": "^6.12.1",
