--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "^5.0.1",
+    "react-toastify": "^10.0.5",
     "rechart": "^0.0.1",
     "recharts": "^2.8.0",
     "sass": "^1.66.0",
