--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
     "autoprefixer": "^10.4.19",
     "axios": "^1.4.0",
     "chart.js": "^4.4.3",
+    "crypto-browserify": "^3.12.0",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.11",
     "jwt-decode": "^4.0.0",
+    "payhere-embed-sdk": "^0.7.7",
     "postcss": "^8.4.39",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
