--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-circular-progressbar": "^2.1.0",
     "react-date-picker": "^11.0.0",
     "react-date-range": "^1.4.0",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.2.1",
     "react-router-dom": "^6.14.1",
