--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.11",
     "jwt-decode": "^4.0.0",
+    "moment": "^2.30.1",
     "payhere-embed-sdk": "^0.7.7",
     "postcss": "^8.4.39",
     "react": "^18.2.0",
