--- a/package.json
+++ b/package.json
@@ -29,8 +29,11 @@
     "crypto-browserify": "^3.12.0",
     "date-fns": "^2.30.0",
     "dayjs": "^1.11.11",
+    "dotenv": "^16.4.5",
+    "install": "^0.13.0",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
+    "npm": "^10.9.1",
     "payhere-embed-sdk": "^0.7.7",
     "postcss": "^8.4.39",
     "react": "^18.2.0",
