--- a/default.conf
+++ b/default.conf
@@ -1,12 +1,13 @@
 server {
-    listen       80;
-    listen  [::]:80;
+    listen       3000;
+    listen  [::]:3000;
     server_name  localhost;
 
     location / {
-        root   /usr/share/nginx/html;  # This should point to the folder where your index.html is located
+        root   /usr/share/nginx/html;  # Path where the built React app files are located
         index  index.html index.htm;
 
+        # For React or SPA, make sure client-side routing works
         try_files $uri $uri/ /index.html;  # Fallback to index.html for client-side routing
     }
 
