--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/jspdf": "^2.0.0",
     "autoprefixer": "^10.4.19",
     "axios": "^1.7.8",
     "chart.js": "^4.4.3",
@@ -31,6 +32,8 @@
     "dayjs": "^1.11.11",
     "dotenv": "^16.4.5",
     "install": "^0.13.0",
+    "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "npm": "^10.9.1",
